--- a/user/style.css
+++ b/user/style.css
@@ -5,18 +5,22 @@
     box-sizing: border-box;
 }
 
+nav {
+    width: 100%;
+    height: 8rem;    
+    background-color: #2D3436;
+}
 
 header{
-    width: 120rem;
+    width: 100%;
     height: 43rem;
     background-color: #DFE6E9;
     color: #2D3436;
 }
 
-nav {
-    width: 120rem;
-    height: 8rem;    
-    background-color: #2D3436;
+.firstBanner{
+    width: 100%;
+    height: 57rem;
 }
 
 .titleBanner {
@@ -33,6 +37,13 @@ nav {
     max-width: 20%;
 }
 
+
+.subTextBanner {
+    font-size: 20px;
+    font-family: "Montserrat";
+    font-weight: 300;
+}
+
 .button {
     padding: 0.5rem 4.5rem 0.5rem 4.5rem;
     max-width: 355px;
@@ -46,13 +57,6 @@ nav {
     font-size: 26px;
     font-family: "Montserrat";
 }
-
-.subTextBanner {
-    font-size: 20px;
-    font-family: "Montserrat";
-    font-weight: 300;
-}
-
 
 .titlePrimary {
     margin-top: 4.5rem;
