--- a/user/style.css
+++ b/user/style.css
@@ -11,32 +11,43 @@ nav {
     background-color: #2D3436;
 }
 
-header{
+header {
     width: 100%;
     height: 43rem;
     background-color: #DFE6E9;
     color: #2D3436;
 }
 
-.firstBanner{
+.firstBanner {
     width: 100%;
     height: 57rem;
 }
 
-.titleBanner {
+.secondBanner {
+    display: flex;
+    flex-direction: row;
+}
+
+.titleHeader {
     font-size: 52px;
     font-family: "Montserrat";
     font-weight: 600;
     max-width: 35%;
 }
 
-.textBanner {
+.textFirstBanner {
     font-size: 28px;
     font-family: "Montserrat";
     font-weight: 400;
     max-width: 20%;
 }
 
+.textSecondBanner {
+    font-size: 28px;
+    font-family: "Montserrat";
+    font-weight: 400;
+    max-width: 80%;
+}
 
 .subTextBanner {
     font-size: 20px;
@@ -51,14 +62,11 @@ header{
     border-radius: 0.5rem;
     background-color: #354D5C;
     color: #FBFAF8;
-}
-
-.button p {
     font-size: 26px;
     font-family: "Montserrat";
 }
 
-.titlePrimary {
+.titleBanner {
     margin-top: 4.5rem;
     font-size: 48px;
     font-family: "Montserrat";
@@ -72,7 +80,7 @@ header{
     justify-content: space-evenly;
 }
 
-.bigProductCard{
+.bigProductCard {
     display: flex;
     align-items: center;
     justify-content: center;
