--- a/user/style.css
+++ b/user/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -26,6 +25,7 @@ header {
 .secondBanner {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .titleHeader {
@@ -35,18 +35,24 @@ header {
     max-width: 35%;
 }
 
-.textFirstBanner {
+.titleBanner {
+    margin-top: 4.5rem;
+    font-size: 48px;
+    font-family: "Montserrat";
+    color: #2D3436;
+}
+
+.textHeaderBanner {
     font-size: 28px;
     font-family: "Montserrat";
     font-weight: 400;
-    max-width: 20%;
 }
 
 .textSecondBanner {
     font-size: 28px;
     font-family: "Montserrat";
     font-weight: 400;
-    max-width: 80%;
+    max-width: 85%;
 }
 
 .subTextBanner {
@@ -66,13 +72,6 @@ header {
     font-family: "Montserrat";
 }
 
-.titleBanner {
-    margin-top: 4.5rem;
-    font-size: 48px;
-    font-family: "Montserrat";
-    color: #2D3436;
-}
-
 .productLine {
     margin-top: 1.5rem;
     display: flex;
@@ -81,23 +80,77 @@ header {
 }
 
 .bigProductCard {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border-radius: 2px;
     width: 27rem;
     height: 42rem;
-    color: #354D5C;
     background-color: #DFE6E9;
-    font-size: 26px;
+}
+
+.bigProductCard figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     box-shadow: inset 0 0 6px #2D3436;
+    width: 27rem;
+    height: 42rem;
 }
 
 .bigProductCard img {
-    max-width: 29rem;
-    max-height: 29rem;
+    align-self: center;
+    padding-bottom: 4rem;
+    max-width: 33rem;
+    max-height: 33rem;
 }
 
 .bigProductCard figcaption {
+    padding: 1rem;
     font-family: "Montserrat";
+    color: #354D5C;
+    font-size: 26px;
+}
+
+
+.categoryLine {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 600px;
+}
+
+.categoryLine figure {
+    display: inline-block;
+    position: relative;
+    background-color: #2D3436;
+    max-width: 325px;
+    max-height: 700px;
+    border-radius: 25px;    
+}
+
+.categoryLine figure {
+    max-width: 334px;
+    max-height: 700px;
+}
+
+.categoryLine img{
+    max-width: 325px;
+    max-height: 700px;
+    border-radius: 25px;
+    transition: 1s;
+    opacity: 55%;
+}
+
+.categoryLine img:hover {
+    max-width: 334px;
+    max-height: 700px;
+}
+
+.categoryLine figcaption {
+    position: absolute;
+    top: 50%;
+    transform: rotate(270deg);
+    font-size: 52px;
+    font-family: "Montserrat";
+    color: #FBFAF8;
+    width: 500;
+
 }
